make a little control logic

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="theme_red">#ff4066</color>
     <color name="color_check_bg">#ff408c</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
