--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="toggleButtonOnClickStop"
+            android:enabled="false"
             android:text="@string/stop" />
+
+        <com.xxzoo.xyz.vendor.widget.UpdateTimeTextView
+            android:id="@+id/info_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground" />
 
     </LinearLayout>
 
