--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="color_check_bg">#ff408c</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="red_square">#fa3a25</color>
+    <color name="press">#25fa55</color>
+
 </resources>
