--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:enabled="false"
             android:text="@string/stop" />
 
-        <com.xxzoo.xyz.vendor.widget.UpdateTimeTextView
+        <com.xyzvendor.widget.UpdateTimeTextView
             android:id="@+id/info_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
