--- a/app/src/main/res/layout/item_slide_video.xml
+++ b/app/src/main/res/layout/item_slide_video.xml
@@ -21,16 +21,17 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="1dp"
                 android:src="@drawable/video_icon" />
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="1dp"
                 android:layout_toRightOf="@+id/imgLamp"
                 android:gravity="center"
+                android:text="name"
                 android:textColor="#000000"
                 android:textSize="17sp" />
 
@@ -39,12 +40,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="18dp"
                 android:layout_below="@+id/tvName"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="1dp"
                 android:layout_toRightOf="@+id/imgLamp"
                 android:gravity="center"
                 android:text="content"
                 android:textColor="#000000"
                 android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/button_item_slide_video_play"
+                android:layout_width="150px"
+                android:layout_height="120px"
+                android:layout_alignBaseline="@+id/tvContent"
+                android:layout_alignBottom="@+id/tvContent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:text="播放"
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <View
