Sensor.TYPE_ACCELEROMETER

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/main_textview_sensor_info_a"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="sensor info" />
+
     <ListView
         android:id="@+id/function_listView"
         android:layout_width="wrap_content"
