--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -19,24 +19,24 @@
             android:layout_height="match_parent">
 
             <SeekBar
-                android:id="@+id/progress"
+                android:id="@+id/progress_Sensitivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/text1"
-                android:min="10"
+                android:layout_toLeftOf="@+id/text_Sensitivity"
                 android:max="100"
-                android:progress="20"
                 android:maxHeight="2dp"
+                android:min="10"
                 android:minHeight="2dp"
                 android:paddingBottom="3dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:paddingTop="3dp"
+                android:progress="20"
                 android:progressDrawable="@drawable/layer_progress"
                 android:thumb="@drawable/shape_circle" />
 
             <TextView
-                android:id="@+id/text1"
+                android:id="@+id/text_Sensitivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -52,5 +52,50 @@
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:background="@android:color/darker_gray" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="视频文件的时间长度调整" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <SeekBar
+                android:id="@+id/progress_video_size"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/text_video_size"
+                android:max="600"
+                android:maxHeight="2dp"
+                android:minHeight="2dp"
+                android:paddingBottom="3dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="3dp"
+                android:progress="60"
+                android:progressDrawable="@drawable/layer_progress"
+                android:thumb="@drawable/shape_circle" />
+
+            <TextView
+                android:id="@+id/text_video_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:gravity="left"
+                android:padding="6dp"
+                android:text="60s"
+                android:textColor="#7171af"
+                android:textSize="16dp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
