--- a/app/src/main/res/layout/activity_video_recorder2.xml
+++ b/app/src/main/res/layout/activity_video_recorder2.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xyz.drivingRecorder.VideoRecorde2Activity"
     android:orientation="vertical">
 
     <com.xyz.drivingRecorder.MovieRecorderView
@@ -26,14 +25,14 @@
             android:id="@+id/button_capture_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="startRecord"
+            android:onClick="toggleButtonOnClickStart"
             android:text="@string/start" />
         <Button
             android:id="@+id/button_capture_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:onClick="stopRecord"
+            android:onClick="toggleButtonOnClickStop"
             android:text="@string/stop" />
 
         <com.xyz.vendor.widget.UpdateTimeTextView
